# nova

./: .gitignore  Cargo.toml  README.md  code.txt  fac.txt  full_stl.txt  hello.txt  notes  notes.md  stl.txt  user.txt
.github/workflows/: tests.yml
src/: constants.rs  evaluator.rs  file.rs  lexer.rs  lib.rs  macros.rs  main.rs  message.rs  parser.rs  repl.rs  time.rs
src/evaluator/: builtins.rs  builtins_tco.rs  context.rs  context_tco.rs  data.rs  data_tco.rs  eval_helpers.rs  eval_helpers_tco.rs  evaluator.rs  evaluator_tco.rs  function.rs  function_tco.rs  mod.rs  params.rs
src/evaluator/evaluator_old/: builtins.rs  context.rs  data.rs  eval_helpers.rs  evaluator.rs  function.rs
src/parser/: mod.rs  node.rs  parse_node.rs  parse_special.rs  parser.rs  special.rs
src/tests/: integration_test.rs
src/utils/: constants.rs  file.rs  macros.rs  message.rs  mod.rs  time.rs
tests/: integration_test.rs
